--- a/css/style.css
+++ b/css/style.css
@@ -17,24 +17,35 @@ section {
 	float: left;
 	position: relative; 
 	background: orange;
-	border: 3px solid black;
+	border: 1px solid black;
 	margin-bottom: 20px;
-}
-.corner {
-	position: absolute;
-	top: 0px; right: 0px;
-	padding: 5px;
-	text-align: center;
-	margin: 0;
 }
 #yellow {
 	background: lightyellow;
+	position: absolute;
+	top: 0; right: 0;
+	padding: 5px;
+	text-align: center;
+	margin: 0;
+	border: 1px solid black;
 }
 #blue {
 	background: skyblue;
+	position: absolute;
+	top: 0; right: 0;
+	padding: 5px;
+	text-align: center;
+	margin: 0;
+	border: 1px solid black;
 }
 #red {
 	background: red;
+	position: absolute;
+	top: 0; right: 0;
+	padding: 5px;
+	text-align: center;
+	margin: 0;
+	border: 1px solid black;
 }
 
 @media (min-width: 992px) {
